--- a/SachOnline/Views/SachOnline/ChiTietSach.cshtml
+++ b/SachOnline/Views/SachOnline/ChiTietSach.cshtml
@@ -53,7 +53,7 @@
                 <p class="ngaycapnhat">Ngày cập nhật: @Html.FormatValue(@Model.NgayCapNhat, "{0:dd/MM/yyyy}")</p>
                 <p class="giaban">Giá bán: <span class="price">@Html.FormatValue(@Model.GiaBan, "{0:#,##0}") VND</span></p>
                 <p class="addtocart">
-                    <a href="@Url.Action("AddToCart","ShoppingCart") new {id = @Model.MaSach}" class="btn btn-primary" role="button">
+                    <a href="@Url.Action("ThemGioHang","GioHang", new {ms = @Model.MaSach, url=Request.Url.ToString()})" class="btn btn-primary" role="button">
                         <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>Add to Cart
                     </a>
                 </p>
